@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

class GSM {
}

class Task {
    title
    description
    degreeOfUrgency
    expectedDuration
    status
    startingDate
}

class Agenda{
}

class Team {
}

class GreenSpace {
    name
    area
    type
    address
    gsmEmail
}

GSM "1" - "*" Team : assigns >

Team "0..1" -- "*" Task : is assigned to >

Task "*" -- "1" Agenda : belongs to >

Task "*" - "1" GreenSpace : is associated with >

@enduml